# AI-Powered-CRM-Customer-Intelligence-System-

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/src/: config.py
backend/src/api/: main.py
backend/src/api/routes/: analysis.py  customers.py  health.py  metrics.py  records.py
backend/src/models/: analysis.py  crm.py  customer.py
backend/src/services/: analysis_context.py  crm_aggregate.py  crm_cache.py  crm_ingest.py  crmarena_data.py  customer_health.py  gemini_client.py
data/: default_layout.json
frontend/: pyproject.toml
frontend/.streamlit/: config.toml
frontend/src/: analysis_context.py  api_client.py  app.py  default_layout.py  session.py
frontend/src/components/: charts.py  customer_detail.py  customer_table.py  degraded_banner.py  executive_summary.py  insight_feed.py  layout_editor.py  sidebar_ai.py  tables.py  trends.py
