[project]
name = "crm-dashboard-frontend"
version = "0.1.0"
description = "Streamlit frontend for AI CRM Dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
